[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-gnap"
version = "0.1.0"
description = "Production-ready GNAP (RFC 9635) authentication + HTTP Message Signatures (RFC 9421) for Django REST Framework, with Open Payments support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Sam", email = "sam.mungaike@gmail.com" },
]
keywords = ["django", "drf", "gnap", "oauth", "authentication", "open-payments", "http-signatures", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "httpx>=0.27",
    "cryptography>=42",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "black>=24",
    "isort>=5",
    "mypy>=1.10",
    "django-stubs>=5",
    "djangorestframework-stubs>=3",
    "responses>=0.25",
    "freezegun>=1.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/yourusername/drf-gnap"
Repository = "https://github.com/yourusername/drf-gnap"
Documentation = "https://drf-gnap.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/drf-gnap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["drf_gnap*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
known_django = ["django", "rest_framework"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example.example.settings"
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=drf_gnap --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["drf_gnap"]
omit = ["*/migrations/*", "*/tests/*"]